config.pl: Add CgiDateFormatMMDD

--- a/templates/config.pl.erb
+++ b/templates/config.pl.erb
@@ -222,6 +222,7 @@ $Conf{Language} = '<%= @language %>';
 $Conf{CgiUserHomePageCheck} = '';
 $Conf{CgiUserUrlCreate}     = 'mailto:%s';
 $Conf{CgiDateFormatMMDD} = 1;
+$Conf{CgiDateFormatMMDD} = '<%= @cgi_date_format_mmdd %>';
 $Conf{CgiNavBarAdminAllHosts} = 1;
 $Conf{CgiSearchBoxEnable} = 1;
 $Conf{CgiNavBarLinks} = [
