Change parameter names to match naming convension

--- a/templates/config.pl.erb
+++ b/templates/config.pl.erb
@@ -15,8 +15,8 @@ $Conf{WakeupSchedule} = [<%= @wakeup_schedule.join(', ') %>];
 $Conf{MaxBackups} = <%= @max_backups %>;
 $Conf{MaxUserBackups} = <%= @max_user_backups %>;
 $Conf{MaxPendingCmds} = <%= @max_pending_cmds %>;
-$Conf{MaxBackupPCNightlyJobs} = <%= @max_backup_pc_nightly_jobs %>;
-$Conf{BackupPCNightlyPeriod} = <%= @backup_pc_nightly_period %>;
+$Conf{MaxBackupPCNightlyJobs} = <%= @max_backuppc_nightly_jobs %>;
+$Conf{BackupPCNightlyPeriod} = <%= @backuppc_nightly_period %>;
 $Conf{MaxOldLogFiles} = <%= @max_old_log_files %>;
 $Conf{DfPath} = '/bin/df';
 $Conf{DfCmd} = '$dfPath $topDir';
@@ -184,7 +184,7 @@ $Conf{FixedIPNetBiosNameCheck} = 0;
 $Conf{PingPath} = '/bin/ping';
 $Conf{PingCmd} = '$pingPath -c 1 -w 3 $host';
 $Conf{Ping6Path} = '/bin/ping6';
-$Conf{PingMaxMsec} = <%= @pingmaxmsec %>;
+$Conf{PingMaxMsec} = <%= @ping_max_msec %>;
 $Conf{CompressLevel} = 3;
 $Conf{ClientTimeout} = 72000;
 $Conf{MaxOldPerPCLogFiles} = 12;
@@ -201,7 +201,7 @@ $Conf{SendmailPath} = '/usr/sbin/sendmail';
 $Conf{EMailNotifyMinDays} = <%= @email_notify_min_days %>;
 $Conf{EMailFromUserName} = '<%= @email_from_user_name %>';
 $Conf{EMailAdminUserName} = '<%= @email_admin_user_name %>';
-$Conf{EMailUserDestDomain} = '<%= @email_destination_domain %>';
+$Conf{EMailUserDestDomain} = '<%= @email_user_dest_domain %>';
 $Conf{EMailNoBackupEverSubj} = undef;
 $Conf{EMailNoBackupEverMesg} = undef;
 $Conf{EMailNotifyOldBackupDays} = <%= @email_notify_old_backup_days %>;
