--- a/templates/host.pl.erb
+++ b/templates/host.pl.erb
@@ -43,90 +43,94 @@ $Conf{PingCmd} = '<%= @ping_cmd %>';
 $Conf{PingMaxMsec} = <%= @ping_max_msec %>;
 <% end -%>
 <% if @blackout_good_cnt -%>
-$Conf{BlackoutGoodCnt}      = <%= @blackout_good_cnt %>;
+  $Conf{BlackoutGoodCnt}      = <%= @blackout_good_cnt %>;
 <% end -%>
-<% if !@backup_files_only.empty? -%>
-<% if @backup_files_only.is_a?(Hash) -%>
-$Conf{BackupFilesOnly} = {
-<% @backup_files_only.keys.sort.each do |key| -%>
-  '<%= key %>'  => <% if @backup_files_only[key].is_a?(Array) %>['<%= @backup_files_only[key].join("', '") %>']<% else %><%= @backup_files_only[key] %><% end %>,
+<% if defined?(@backup_files_only) -%>
+  <% if !@backup_files_only.empty? -%>
+    <% if @backup_files_only.is_a?(Hash) -%>
+      $Conf{BackupFilesOnly} = {
+      <% @backup_files_only.keys.sort.each do |key| -%>
+	'<%= key %>'  => <% if @backup_files_only[key].is_a?(Array) %>['<%= @backup_files_only[key].join("', '") %>']<% else %><%= @backup_files_only[key] %><% end %>,
+      <% end -%>
+      };
+    <% elsif @backup_files_only.is_a?(Array) -%>
+      $Conf{BackupFilesOnly} = ['<%= @backup_files_only.join("', '") %>'];
+    <% else -%>
+      $Conf{BackupFilesOnly} = '<%= @backup_files_only %>';
+    <% end -%>
+  <% end -%>
 <% end -%>
-};
-<% elsif @backup_files_only.is_a?(Array) -%>
-$Conf{BackupFilesOnly} = ['<%= @backup_files_only.join("', '") %>'];
-<% else -%>
-$Conf{BackupFilesOnly} = '<%= @backup_files_only %>';
+<%- if defined?(@backup_files_exclude) -%>
+  <%- if !@backup_files_exclude.empty? -%>
+    <%- if @backup_files_exclude.is_a?(Hash) -%>
+      $Conf{BackupFilesExclude} = {
+      <% @backup_files_exclude.keys.sort.each do |key| -%>
+	'<%= key %>'  => <% if @backup_files_exclude[key].is_a?(Array) %>['<%= @backup_files_exclude[key].join("', '") %>']<% else %><%= @backup_files_exclude[key] %><% end %>,
+      <% end -%>
+      };
+    <%- elsif @backup_files_exclude.is_a?(Array) -%>
+      $Conf{BackupFilesExclude} = ['<%= @backup_files_exclude.join("', '") %>'];
+    <%- else -%>
+      $Conf{BackupFilesExclude} = '<%= @backup_files_exclude %>';
+    <% end -%>
+  <% end -%>
 <% end -%>
+<%- if @smb_share_name and !@smb_share_name.empty? %>
+  $Conf{SmbShareName} = '<%= @smb_share_name %>';
 <% end -%>
-<% if !@backup_files_exclude.empty? -%>
-<% if @backup_files_exclude.is_a?(Hash) -%>
-$Conf{BackupFilesExclude} = {
-<% @backup_files_exclude.keys.sort.each do |key| -%>
-  '<%= key %>'  => <% if @backup_files_exclude[key].is_a?(Array) %>['<%= @backup_files_exclude[key].join("', '") %>']<% else %><%= @backup_files_exclude[key] %><% end %>,
+<%- if @smb_share_username and !@smb_share_username.empty? -%>
+  $Conf{SmbShareUserName} = '<%= @smb_share_username %>';
 <% end -%>
-};
-<% elsif @backup_files_exclude.is_a?(Array) -%>
-$Conf{BackupFilesExclude} = ['<%= @backup_files_exclude.join("', '") %>'];
-<% else -%>
-$Conf{BackupFilesExclude} = '<%= @backup_files_exclude %>';
+<%- if @smb_share_passwd and !@smb_share_passwd.empty? -%>
+  $Conf{SmbSharePasswd} = '<%= @smb_share_passwd %>';
 <% end -%>
+<%- if @smb_client_full_cmd and !@smb_client_full_cmd.empty? -%>
+  $Conf{SmbClientFullCmd} = '<%= @smb_client_full_cmd %>';
 <% end -%>
-<% if !@smb_share_name.empty? %>
-$Conf{SmbShareName} = '<%= @smb_share_name %>';
+<%- if @smb_client_incr_cmd and !@smb_client_incr_cmd.empty? -%>
+  $Conf{SmbClientIncrCmd} = '<%= @smb_client_incr_cmd %>';
 <% end -%>
-<% if !@smb_share_username.empty? -%>
-$Conf{SmbShareUserName} = '<%= @smb_share_username %>';
+<%- if @smb_client_restore_cmd and !@smb_client_restore_cmd.empty? -%>
+  $Conf{SmbClientRestoreCmd} = '<%= @smb_client_restore_cmd %>';
 <% end -%>
-<% if !@smb_share_passwd.empty? -%>
-$Conf{SmbSharePasswd} = '<%= @smb_share_passwd %>';
+<%- if @tar_share_name and !@tar_share_name.empty? -%>
+  <%- if @tar_share_name.is_a?(Array) -%>
+    $Conf{TarShareName} = ['<%= @tar_share_name.join("', '") %>'];
+  <% else -%>
+    $Conf{TarShareName} = '<%= @tar_share_name %>';
+  <% end -%>
 <% end -%>
-<% if !@smb_client_full_cmd.empty? -%>
-$Conf{SmbClientFullCmd} = '<%= @smb_client_full_cmd %>';
-<% end -%>
-<% if !@smb_client_incr_cmd.empty? -%>
-$Conf{SmbClientIncrCmd} = '<%= @smb_client_incr_cmd %>';
-<% end -%>
-<% if !@smb_client_restore_cmd.empty? -%>
-$Conf{SmbClientRestoreCmd} = '<%= @smb_client_restore_cmd %>';
-<% end -%>
-<% if !@tar_share_name.empty? -%>
-<% if @tar_share_name.is_a?(Array) -%>
-$Conf{TarShareName} = ['<%= @tar_share_name.join("', '") %>'];
-<% else -%>
-$Conf{TarShareName} = '<%= @tar_share_name %>';
-<% end -%>
-<% end -%>
-<% if !@tar_client_cmd.empty? -%>
-$Conf{TarClientCmd} = '<%= @tar_client_cmd %>';
+<%- if @tar_client_cmd and !@tar_client_cmd.empty? -%>
+  $Conf{TarClientCmd} = '<%= @tar_client_cmd %>';
 <% elsif !@system_account.empty? -%>
-$Conf{TarClientCmd} = '$sshPath -q -x -n -l <%= @system_account %> $host'
+  $Conf{TarClientCmd} = '$sshPath -q -x -n -l <%= @system_account %> $host'
 . ' env LC_ALL=C $tarPath -c -v -f - -C $shareName+'
 . ' --totals';
 <% end -%>
-<% if !@tar_full_args.empty? -%>
-$Conf{TarFullArgs} = '<%= @tar_full_args %>';
+<%- if @tar_full_args and !@tar_full_args.empty? -%>
+  $Conf{TarFullArgs} = '<%= @tar_full_args %>';
 <% end -%>
-<% if !@tar_incr_args.empty? -%>
-$Conf{TarIncrArgs} = '<%= @tar_incr_args %>';
+<%- if @tar_incr_args and !@tar_incr_args.empty? -%>
+  $Conf{TarIncrArgs} = '<%= @tar_incr_args %>';
 <% end -%>
-<% if !@tar_client_restore_cmd.empty? -%>
-$Conf{TarClientRestoreCmd} = '<%= @tar_client_restore_cmd %>';
+<%- if @tar_client_restore_cmd and !@tar_client_restore_cmd.empty? -%>
+  $Conf{TarClientRestoreCmd} = '<%= @tar_client_restore_cmd %>';
 <% elsif not @system_account.empty? -%>
-$Conf{TarClientRestoreCmd} = '$sshPath -q -x -l <%= @system_account %> $host'
+  $Conf{TarClientRestoreCmd} = '$sshPath -q -x -l <%= @system_account %> $host'
 . ' env LC_ALL=C $tarPath -x -p --numeric-owner --same-owner'
 . ' -v -f - -C $shareName+';
 <% end -%>
-<% if !@rsync_client_cmd.empty? -%>
-$Conf{RsyncClientCmd} = '<%= @rsync_client_cmd %>';
+<%- if @rsync_client_cmd and !@rsync_client_cmd.empty? -%>
+  $Conf{RsyncClientCmd} = '<%= @rsync_client_cmd %>';
 <% elsif !@system_account.empty? %>
-$Conf{RsyncClientCmd} = '$sshPath -q -x -l <%= @system_account %> $host $rsyncPath $argList+';
+  $Conf{RsyncClientCmd} = '$sshPath -q -x -l <%= @system_account %> $host $rsyncPath $argList+';
 <% end -%>
-<% if !@rsync_client_restore_cmd.empty? -%>
-$Conf{RsyncClientRestoreCmd} = '<%= @rsync_client_restore_cmd %>';
+<%- if @rsync_client_restore_cmd and !@rsync_client_restore_cmd.empty? -%>
+  $Conf{RsyncClientRestoreCmd} = '<%= @rsync_client_restore_cmd %>';
 <% elsif !@system_account.empty? -%>
-$Conf{RsyncClientRestoreCmd} = '$sshPath -q -x -l <%= @system_account %> $host $rsyncPath $argList+';
+  $Conf{RsyncClientRestoreCmd} = '$sshPath -q -x -l <%= @system_account %> $host $rsyncPath $argList+';
 <% end -%>
-<% if !@rsync_share_name.empty? -%>
+<%- if @rsync_share_name and !@rsync_share_name.empty? -%>
 <% if @rsync_share_name.is_a?(Array) -%>
 $Conf{RsyncShareName} = ['<%= @rsync_share_name.join("', '") %>'];
 <% else -%>
@@ -136,10 +140,10 @@ $Conf{RsyncShareName} = '<%= @rsync_share_name %>';
 <% if @rsyncd_client_port -%>
 $Conf{RsyncdClientPort} = <%= @rsyncd_client_port %>;
 <% end -%>
-<% if !@rsyncd_user_name.empty? -%>
+<%- if @rsyncd_user_name and !@rsyncd_user_name.empty? -%>
 $Conf{RsyncdUserName} = '<%= @rsyncd_user_name %>';
 <% end -%>
-<% if !@rsyncd_passwd.empty? -%>
+<%- if @rsyncd_passwd and !@rsyncd_passwd.empty? -%>
 $Conf{RsyncdPasswd} = '<%= @rsyncd_passwd %>';
 <% end -%>
 <% if @rsyncd_auth_required -%>
@@ -154,22 +158,22 @@ $Conf{RsyncArgs} = ['<%= @rsync_args.join("', '") %>'];
 <% if @rsync_restore_args.is_a?(Array) and !@rsync_restore_args.empty? -%>
 $Conf{RsyncRestoreArgs} = ['<%= @rsync_restore_args.join("', '") %>'];
 <% end -%>
-<% if !@dump_pre_user_cmd.empty? -%>
+<%- if @dump_pre_user_cmd and !@dump_pre_user_cmd.empty? -%>
 $Conf{DumpPreUserCmd} = '<%= @dump_pre_user_cmd %>';
 <% end -%>
-<% if !@dump_post_user_cmd.empty? -%>
+<%- if @dump_post_user_cmd and !@dump_post_user_cmd.empty? -%>
 $Conf{DumpPostUserCmd}    = '<%= @dump_post_user_cmd %>';
 <% end -%>
-<% if !@dump_pre_share_cmd.empty? -%>
+<%- if @dump_pre_share_cmd and !@dump_pre_share_cmd.empty? -%>
 $Conf{DumpPreShareCmd}    = '<%= @dump_pre_share_cmd %>';
 <% end -%>
-<% if !@dump_post_share_cmd.empty? -%>
+<%- if @dump_post_share_cmd and !@dump_post_share_cmd.empty? -%>
 $Conf{DumpPostShareCmd}   = '<%= @dump_post_share_cmd %>';
 <% end -%>
-<% if !@restore_pre_user_cmd.empty? -%>
+<%- if @restore_pre_user_cmd and !@restore_pre_user_cmd.empty? -%>
 $Conf{RestorePreUserCmd}  = '<%= @restore_pre_user_cmd %>';
 <% end -%>
-<% if !@restore_post_user_cmd.empty? -%>
+<%- if @restore_post_user_cmd and !@restore_post_user_cmd.empty? -%>
 $Conf{RestorePostUserCmd} = '<%= @restore_post_user_cmd %>';
 <% end -%>
 <% if not @user_cmd_check_status -%>
@@ -178,13 +182,13 @@ $Conf{UserCmdCheckStatus} = 0;
 <% if @email_notify_min_days -%>
 $Conf{EMailNotifyMinDays} = <%= @email_notify_min_days %>;
 <% end -%>
-<% if !@email_from_user_name.empty? -%>
+<%- if @email_from_user_name and !@email_from_user_name.empty? -%>
 $Conf{EMailFromUserName} = '<%= @email_from_user_name %>';
 <% end -%>
-<% if !@email_admin_user_name.empty? -%>
+<%- if @email_admin_user_name and !@email_admin_user_name.empty? -%>
 $Conf{EMailAdminUserName} = '<%= @email_admin_user_name %>';
 <% end -%>
-<% if !@email_destination_domain.empty? -%>
+<%- if @email_destination_domain and !@email_destination_domain.empty? -%>
 $Conf{EMailUserDestDomain} = '<%= @email_destination_domain %>';
 <% end -%>
 <% if @email_notify_old_backup_days -%>
