--- a/templates/host-augeas-create.erb
+++ b/templates/host-augeas-create.erb
@@ -2,10 +2,7 @@ set 01/host <%= @config_name %>
 set 01/dhcp <%= @hosts_file_dhcp %>
 set 01/user <%= @hosts_file_user %>
 <% if defined?(@hosts_file_more_users) %>
-<% hosts_file_more_users = @hosts_file_more_users.split(',') -%>
 <% if ! hosts_file_more_users.empty? -%>
-<% hosts_file_more_users.each_with_index do |user, i| -%>
-set 01/moreusers[<%= i + 1 %>] <%= user %>
-<% end -%>
+set 01/moreusers[<%= hosts_file_more_users.join(',') -%>
 <% end -%>
 <% end -%>
