--- a/templates/host-augeas-create.erb
+++ b/templates/host-augeas-create.erb
@@ -3,6 +3,8 @@ set 01/dhcp <%= @hosts_file_dhcp %>
 set 01/user <%= @hosts_file_user %>
 <% if defined?(@hosts_file_more_users) %>
 <% if ! @hosts_file_more_users.empty? -%>
-set 01/moreusers[<%= @hosts_file_more_users.join(',') -%>
+<% @hosts_file_more_users.each_with_index do |user, i| -%>
+set 01/moreusers[<%= i + 1 %>] <%= user %>
+<% end -%>
 <% end -%>
 <% end -%>
