--- a/templates/host.pl.erb
+++ b/templates/host.pl.erb
@@ -1,10 +1,10 @@
 <% if defined?(@client_name_alias) -%>
-$Conf{ClientNameAlias} = '<%= @client_name_alias%>';
+$Conf{ClientNameAlias} = '<%= @client_name_alias %>';
 <% end -%>
 $Conf{XferMethod} = '<%= @xfer_method %>';
 $Conf{XferLogLevel} = <%= @xfer_loglevel %>;
 <% if defined?(@backups_disable) -%>
-$Conf{BackupsDisable} = <%= @real_backups_disable%>;
+$Conf{BackupsDisable} = <%= @real_backups_disable %>;
 <% end -%>
 <% if defined?(@full_period) -%>
 $Conf{FullPeriod} = <%= @full_period %>;
@@ -75,13 +75,13 @@ $Conf{BackupFilesExclude} = '<%= @backup_files_exclude %>';
 <% end -%>
 <% end -%>
 <% end -%>
-<% if @smb_share_name and !@smb_share_name.empty? %>
-$Conf{SmbShareName} = '<%= @smb_share_name %>';
+<% if defined?(@smb_share_name) and !@smb_share_name.empty? %>
+$Conf{SmbShareName} = <% if @smb_share_name.is_a?(Array) %>[<%= @smb_share_name.join(', ') %>]<% else %>'<%= @smb_share_name %><% end %>;
 <% end -%>
-<% if @smb_share_username and !@smb_share_username.empty? -%>
+<% if defined?(@smb_share_username) and !@smb_share_username.empty? -%>
 $Conf{SmbShareUserName} = '<%= @smb_share_username %>';
 <% end -%>
-<% if @smb_share_passwd and !@smb_share_passwd.empty? -%>
+<% if defined?(@smb_share_passwd) and !@smb_share_passwd.empty? -%>
 $Conf{SmbSharePasswd} = '<%= @smb_share_passwd %>';
 <% end -%>
 <% if @smb_client_full_cmd and !@smb_client_full_cmd.empty? -%>
@@ -107,31 +107,31 @@ $Conf{TarClientCmd} = '$sshPath -q -x -n -l <%= @system_account %> $host'
 . ' env LC_ALL=C $tarPath -c -v -f - -C $shareName+'
 . ' --totals';
 <% end -%>
-<% if @tar_full_args and !@tar_full_args.empty? -%>
+<% if defined?(@tar_full_args) and !@tar_full_args.empty? -%>
 $Conf{TarFullArgs} = '<%= @tar_full_args %>';
 <% end -%>
-<% if @tar_incr_args and !@tar_incr_args.empty? -%>
+<% if defined?(@tar_incr_args) and !@tar_incr_args.empty? -%>
 $Conf{TarIncrArgs} = '<%= @tar_incr_args %>';
 <% end -%>
-<% if @tar_client_restore_cmd and !@tar_client_restore_cmd.empty? -%>
+<% if defined?(@tar_client_restore_cmd) and !@tar_client_restore_cmd.empty? -%>
 $Conf{TarClientRestoreCmd} = '<%= @tar_client_restore_cmd %>';
 <% elsif not @system_account.empty? -%>
 $Conf{TarClientRestoreCmd} = '$sshPath -q -x -l <%= @system_account %> $host'
 . ' env LC_ALL=C $tarPath -x -p --numeric-owner --same-owner'
 . ' -v -f - -C $shareName+';
 <% end -%>
-<% if @rsync_client_cmd and !@rsync_client_cmd.empty? -%>
+<% if defined?(@rsync_client_cmd) and !@rsync_client_cmd.empty? -%>
 $Conf{RsyncClientCmd} = '<%= @rsync_client_cmd %>';
 <% elsif !@system_account.empty? %>
 $Conf{RsyncClientCmd} = '$sshPath -q -x -l <%= @system_account %> $host $rsyncPath $argList+';
 <% end -%>
-<% if @rsync_client_restore_cmd and !@rsync_client_restore_cmd.empty? -%>
+<% if defined?(@rsync_client_restore_cmd) and !@rsync_client_restore_cmd.empty? -%>
 $Conf{RsyncClientRestoreCmd} = '<%= @rsync_client_restore_cmd %>';
 <% elsif !@system_account.empty? -%>
 $Conf{RsyncClientRestoreCmd} = '$sshPath -q -x -l <%= @system_account %> $host $rsyncPath $argList+';
 <% end -%>
-<% if @rsync_share_name and !@rsync_share_name.empty? -%>
-<% if defined?(@rsync_share_name.is_a?(Array)) -%>
+<% if defined?(@rsync_share_name) and !@rsync_share_name.empty? -%>
+<% if @rsync_share_name.is_a?(Array) -%>
 $Conf{RsyncShareName} = ['<%= @rsync_share_name.join("', '") %>'];
 <% else -%>
 $Conf{RsyncShareName} = '<%= @rsync_share_name %>';
@@ -140,10 +140,10 @@ $Conf{RsyncShareName} = '<%= @rsync_share_name %>';
 <% if defined?(@rsyncd_client_port) -%>
 $Conf{RsyncdClientPort} = <%= @rsyncd_client_port %>;
 <% end -%>
-<% if @rsyncd_user_name and !@rsyncd_user_name.empty? -%>
+<% if defined?(@rsyncd_user_name) and !@rsyncd_user_name.empty? -%>
 $Conf{RsyncdUserName} = '<%= @rsyncd_user_name %>';
 <% end -%>
-<% if @rsyncd_passwd and !@rsyncd_passwd.empty? -%>
+<% if defined?(@rsyncd_passwd) and !@rsyncd_passwd.empty? -%>
 $Conf{RsyncdPasswd} = '<%= @rsyncd_passwd %>';
 <% end -%>
 <% if defined?(@rsyncd_auth_required) -%>
@@ -152,7 +152,7 @@ $Conf{RsyncdAuthRequired} = <%= @real_rsyncd_auth_required %>;
 <% if defined?(@rsync_csum_cache_verify_prob) -%>
 $Conf{RsyncCsumCacheVerifyProb} = <%= @rsync_csum_cache_verify_prob %>;
 <% end -%>
-<% if defined?(@rsync_args_extra) and @rsync_args_extra.is_a?(Array) and !@rsync_args_extra.empty? -%>
+<% if defined?(@rsync_args_extra) and !@rsync_args_extra.empty? -%>
 $Conf{RsyncArgsExtra} = ['<%= @rsync_args_extra.join("', '") %>'];
 <% end -%>
 <% if defined?(@rsync_args) and @rsync_args.is_a?(Array) and !@rsync_args.empty? -%>
@@ -161,37 +161,37 @@ $Conf{RsyncArgs} = ['<%= @rsync_args.join("', '") %>'];
 <% if defined?(@rsync_restore_args) and @rsync_restore_args.is_a?(Array) and !@rsync_restore_args.empty? -%>
 $Conf{RsyncRestoreArgs} = ['<%= @rsync_restore_args.join("', '") %>'];
 <% end -%>
-<% if @dump_pre_user_cmd and !@dump_pre_user_cmd.empty? -%>
+<% if defined?(@dump_pre_user_cmd) and !@dump_pre_user_cmd.empty? -%>
 $Conf{DumpPreUserCmd} = '<%= @dump_pre_user_cmd %>';
 <% end -%>
-<% if @dump_post_user_cmd and !@dump_post_user_cmd.empty? -%>
+<% if defined?(@dump_post_user_cmd) and !@dump_post_user_cmd.empty? -%>
 $Conf{DumpPostUserCmd}    = '<%= @dump_post_user_cmd %>';
 <% end -%>
-<% if @dump_pre_share_cmd and !@dump_pre_share_cmd.empty? -%>
+<% if defined?(@dump_pre_share_cmd) and !@dump_pre_share_cmd.empty? -%>
 $Conf{DumpPreShareCmd}    = '<%= @dump_pre_share_cmd %>';
 <% end -%>
-<% if @dump_post_share_cmd and !@dump_post_share_cmd.empty? -%>
+<% if defined?(@dump_post_share_cmd) and !@dump_post_share_cmd.empty? -%>
 $Conf{DumpPostShareCmd}   = '<%= @dump_post_share_cmd %>';
 <% end -%>
-<% if @restore_pre_user_cmd and !@restore_pre_user_cmd.empty? -%>
+<% if defined?(@restore_pre_user_cmd) and !@restore_pre_user_cmd.empty? -%>
 $Conf{RestorePreUserCmd}  = '<%= @restore_pre_user_cmd %>';
 <% end -%>
-<% if @restore_post_user_cmd and !@restore_post_user_cmd.empty? -%>
+<% if defined?(@restore_post_user_cmd) and !@restore_post_user_cmd.empty? -%>
 $Conf{RestorePostUserCmd} = '<%= @restore_post_user_cmd %>';
 <% end -%>
-<% if not @user_cmd_check_status -%>
+<% if not defined?(@user_cmd_check_status) -%>
 $Conf{UserCmdCheckStatus} = 0;
 <% end -%>
 <% if defined?(@email_notify_min_days) -%>
 $Conf{EMailNotifyMinDays} = <%= @email_notify_min_days %>;
 <% end -%>
-<% if @email_from_user_name and !@email_from_user_name.empty? -%>
+<% if defined?(@email_from_user_name) and !@email_from_user_name.empty? -%>
 $Conf{EMailFromUserName} = '<%= @email_from_user_name %>';
 <% end -%>
-<% if @email_admin_user_name and !@email_admin_user_name.empty? -%>
+<% if defined?(@email_admin_user_name) and !@email_admin_user_name.empty? -%>
 $Conf{EMailAdminUserName} = '<%= @email_admin_user_name %>';
 <% end -%>
-<% if @email_destination_domain and !@email_destination_domain.empty? -%>
+<% if defined?(@email_destination_domain) and !@email_destination_domain.empty? -%>
 $Conf{EMailUserDestDomain} = '<%= @email_destination_domain %>';
 <% end -%>
 <% if defined?(@email_notify_old_backup_days) -%>
