--- a/templates/host.pl.erb
+++ b/templates/host.pl.erb
@@ -1,7 +1,7 @@
 <% if defined?(@client_name_alias) -%>
-$Conf{ClientNameAlias} = '<%= @client_name_alias %>';
+$Conf{ClientNameAlias} = "<%= @client_name_alias %>";
 <% end -%>
-$Conf{XferMethod} = '<%= @xfer_method %>';
+$Conf{XferMethod} = "<%= @xfer_method %>";
 $Conf{XferLogLevel} = <%= @xfer_log_level %>;
 <% if defined?(@backups_disable) -%>
 $Conf{BackupsDisable} = <%= @real_backups_disable %>;
@@ -13,7 +13,7 @@ $Conf{FullPeriod} = <%= @full_period %>;
 $Conf{IncrPeriod} = <%= @incr_period %>;
 <% end -%>
 <% if defined?(@full_keep_cnt) -%>
-$Conf{FullKeepCnt} = <% if @full_keep_cnt.is_a?(Array) %>[<%= @full_keep_cnt.join(', ') %>]<% else %><%= @full_keep_cnt %><% end %>;
+$Conf{FullKeepCnt} = <%= PP.pp(@full_keep_cnt,'').chomp -%>;
 <% end -%>
 <% if defined?(@full_age_max) -%>
 $Conf{FullAgeMax}     = <%= @full_age_max %>;
@@ -27,8 +27,8 @@ $Conf{IncrAgeMax}     = <%= @incr_age_max %>;
 <% if defined?(@incr_fill) -%>
 $Conf{IncrFill} = <%= @real_incr_fill %>;
 <% end -%>
-<% if defined?(@incr_levels) and @incr_levels.is_a?(Array) and  !@incr_levels.empty? -%>
-$Conf{IncrLevels} = [<%= @incr_levels.join(', ') %>];
+<% if defined?(@incr_levels) and !@incr_levels.empty? -%>
+$Conf{IncrLevels} = <%= PP.pp(@incr_levels,'').chomp -%>;
 <% end -%>
 <% if defined?(@partial_age_max) -%>
 $Conf{PartialAgeMax} = <%= @partial_age_max %>;
@@ -37,7 +37,7 @@ $Conf{PartialAgeMax} = <%= @partial_age_max %>;
 $Conf{BlackoutBadPingLimit} = <%= @blackout_bad_ping_limit %>;
 <% end -%>
 <% if defined?(@ping_cmd) -%>
-$Conf{PingCmd} = '<%= @ping_cmd %>';
+$Conf{PingCmd} = "<%= @ping_cmd %>";
 <% end -%>
 <% if defined?(@ping_max_msec) -%>
 $Conf{PingMaxMsec} = <%= @ping_max_msec %>;
@@ -45,106 +45,74 @@ $Conf{PingMaxMsec} = <%= @ping_max_msec %>;
 <% if defined?(@blackout_good_cnt) -%>
 $Conf{BlackoutGoodCnt}      = <%= @blackout_good_cnt %>;
 <% end -%>
-<% if defined?(@backup_files_only) -%>
-<% if !@backup_files_only.empty? -%>
-<% if @backup_files_only.is_a?(Hash) -%>
-$Conf{BackupFilesOnly} = {
-<% @backup_files_only.keys.sort.each do |key| -%>
-'<%= key %>'  => <% if @backup_files_only[key].is_a?(Array) %>['<%= @backup_files_only[key].join("', '") %>']<% else %><%= @backup_files_only[key] %><% end %>,
+<% if defined?(@backup_files_only) and !@backup_files_only.empty? -%>
+$Conf{BackupFilesOnly} = <%= PP.pp(@backup_files_only,'').chomp -%>;
 <% end -%>
-};
-<% elsif @backup_files_only.is_a?(Array) -%>
-$Conf{BackupFilesOnly} = ['<%= @backup_files_only.join("', '") %>'];
-<% else -%>
-$Conf{BackupFilesOnly} = '<%= @backup_files_only %>';
-<% end -%>
-<% end -%>
-<% end -%>
-<% if defined?(@backup_files_exclude) -%>
-<% if !@backup_files_exclude.empty? -%>
-<% if @backup_files_exclude.is_a?(Hash) -%>
-$Conf{BackupFilesExclude} = {
-<% @backup_files_exclude.keys.sort.each do |key| -%>
-'<%= key %>'  => <% if @backup_files_exclude[key].is_a?(Array) %>['<%= @backup_files_exclude[key].join("', '") %>']<% else %><%= @backup_files_exclude[key] %><% end %>,
-<% end -%>
-};
-<% elsif @backup_files_exclude.is_a?(Array) -%>
-$Conf{BackupFilesExclude} = ['<%= @backup_files_exclude.join("', '") %>'];
-<% else -%>
-$Conf{BackupFilesExclude} = '<%= @backup_files_exclude %>';
-<% end -%>
-<% end -%>
+<% if defined?(@backup_files_exclude) and !@backup_files_exclude.empty? -%>
+$Conf{BackupFilesExclude} = <%= PP.pp(@backup_files_exclude,'').chomp -%>;
 <% end -%>
 <% if defined?(@smb_share_name) and !@smb_share_name.empty? %>
-$Conf{SmbShareName} = <% if @smb_share_name.is_a?(Array) %>[<%= @smb_share_name.join(', ') %>]<% else %>'<%= @smb_share_name %><% end %>;
+$Conf{SmbShareName} = <%= PP.pp(@smb_share_name,'').chomp -%>;
 <% end -%>
 <% if defined?(@smb_share_username) and !@smb_share_username.empty? -%>
-$Conf{SmbShareUserName} = '<%= @smb_share_username %>';
+$Conf{SmbShareUserName} = "<%= @smb_share_username %>";
 <% end -%>
 <% if defined?(@smb_share_passwd) and !@smb_share_passwd.empty? -%>
-$Conf{SmbSharePasswd} = '<%= @smb_share_passwd %>';
+$Conf{SmbSharePasswd} = "<%= @smb_share_passwd %>";
 <% end -%>
 <% if @smb_client_full_cmd and !@smb_client_full_cmd.empty? -%>
-$Conf{SmbClientFullCmd} = '<%= @smb_client_full_cmd %>';
+$Conf{SmbClientFullCmd} = "<%= @smb_client_full_cmd %>";
 <% end -%>
 <% if @smb_client_incr_cmd and !@smb_client_incr_cmd.empty? -%>
-$Conf{SmbClientIncrCmd} = '<%= @smb_client_incr_cmd %>';
+$Conf{SmbClientIncrCmd} = "<%= @smb_client_incr_cmd %>";
 <% end -%>
 <% if @smb_client_restore_cmd and !@smb_client_restore_cmd.empty? -%>
-$Conf{SmbClientRestoreCmd} = '<%= @smb_client_restore_cmd %>';
+$Conf{SmbClientRestoreCmd} = "<%= @smb_client_restore_cmd %>";
 <% end -%>
 <% if @tar_share_name and !@tar_share_name.empty? -%>
-<% if @tar_share_name.is_a?(Array) -%>
-$Conf{TarShareName} = ['<%= @tar_share_name.join("', '") %>'];
-<% else -%>
-$Conf{TarShareName} = '<%= @tar_share_name %>';
-<% end -%>
+$Conf{TarShareName} = <%= PP.pp(@tar,'').chomp -%>;
 <% end -%>
 <% if @tar_client_cmd and !@tar_client_cmd.empty? -%>
-$Conf{TarClientCmd} = '<%= @tar_client_cmd %>';
+$Conf{TarClientCmd} = "<%= @tar_client_cmd %>";
 <% elsif !@system_account.empty? -%>
 $Conf{TarClientCmd} = '$sshPath -q -x -n -l <%= @system_account %> $host'
 . ' env LC_ALL=C $tarPath -c -v -f - -C $shareName+'
 . ' --totals';
 <% end -%>
 <% if defined?(@tar_full_args) and !@tar_full_args.empty? -%>
-$Conf{TarFullArgs} = '<%= @tar_full_args %>';
+$Conf{TarFullArgs} = "<%= @tar_full_args %>";
 <% end -%>
 <% if defined?(@tar_incr_args) and !@tar_incr_args.empty? -%>
-$Conf{TarIncrArgs} = '<%= @tar_incr_args %>';
+$Conf{TarIncrArgs} = "<%= @tar_incr_args %>";
 <% end -%>
 <% if defined?(@tar_client_restore_cmd) and !@tar_client_restore_cmd.empty? -%>
-$Conf{TarClientRestoreCmd} = '<%= @tar_client_restore_cmd %>';
+$Conf{TarClientRestoreCmd} = "<%= @tar_client_restore_cmd %>";
 <% elsif not @system_account.empty? -%>
 $Conf{TarClientRestoreCmd} = '$sshPath -q -x -l <%= @system_account %> $host'
 . ' env LC_ALL=C $tarPath -x -p --numeric-owner --same-owner'
 . ' -v -f - -C $shareName+';
 <% end -%>
 <% if defined?(@rsync_client_cmd) and !@rsync_client_cmd.empty? -%>
-$Conf{RsyncClientCmd} = '<%= @rsync_client_cmd %>';
+$Conf{RsyncClientCmd} = "<%= @rsync_client_cmd %>";
 <% elsif !@system_account.empty? %>
 $Conf{RsyncClientCmd} = '$sshPath -q -x -l <%= @system_account %> $host $rsyncPath $argList+';
 <% end -%>
 <% if defined?(@rsync_client_restore_cmd) and !@rsync_client_restore_cmd.empty? -%>
-$Conf{RsyncClientRestoreCmd} = '<%= @rsync_client_restore_cmd %>';
+$Conf{RsyncClientRestoreCmd} = "<%= @rsync_client_restore_cmd %>";
 <% elsif !@system_account.empty? -%>
 $Conf{RsyncClientRestoreCmd} = '$sshPath -q -x -l <%= @system_account %> $host $rsyncPath $argList+';
 <% end -%>
 <% if defined?(@rsync_share_name) and !@rsync_share_name.empty? -%>
-<% if @rsync_share_name.is_a?(Array) -%>
-$Conf{RsyncShareName} = ['<%= @rsync_share_name.join("', '") %>'];
-<% else -%>
-$Conf{RsyncShareName} = '<%= @rsync_share_name %>';
-<% end -%>
+$Conf{RsyncShareName} = <%= PP.pp(@rsync_share_name,'').chomp -%>
 <% end -%>
 <% if defined?(@rsyncd_client_port) -%>
 $Conf{RsyncdClientPort} = <%= @rsyncd_client_port %>;
 <% end -%>
 <% if defined?(@rsyncd_user_name) and !@rsyncd_user_name.empty? -%>
-$Conf{RsyncdUserName} = '<%= @rsyncd_user_name %>';
+$Conf{RsyncdUserName} = "<%= @rsyncd_user_name %>";
 <% end -%>
 <% if defined?(@rsyncd_passwd) and !@rsyncd_passwd.empty? -%>
-$Conf{RsyncdPasswd} = '<%= @rsyncd_passwd %>';
+$Conf{RsyncdPasswd} = "<%= @rsyncd_passwd %>";
 <% end -%>
 <% if defined?(@rsyncd_auth_required) -%>
 $Conf{RsyncdAuthRequired} = <%= @real_rsyncd_auth_required %>;
@@ -152,32 +120,32 @@ $Conf{RsyncdAuthRequired} = <%= @real_rsyncd_auth_required %>;
 <% if defined?(@rsync_csum_cache_verify_prob) -%>
 $Conf{RsyncCsumCacheVerifyProb} = <%= @rsync_csum_cache_verify_prob %>;
 <% end -%>
+<% if defined?(@rsync_args) and !@rsync_args.empty? -%>
+$Conf{RsyncArgs} = <%= PP.pp(@rsync_args,'').chomp -%>
+<% end -%>
 <% if defined?(@rsync_args_extra) and !@rsync_args_extra.empty? -%>
-$Conf{RsyncArgsExtra} = ['<%= @rsync_args_extra.join("', '") %>'];
+$Conf{RsyncArgsExtra} = <%= PP.pp(@rsync_args_extra,'').chomp -%>
 <% end -%>
-<% if defined?(@rsync_args) and @rsync_args.is_a?(Array) and !@rsync_args.empty? -%>
-$Conf{RsyncArgs} = ['<%= @rsync_args.join("', '") %>'];
-<% end -%>
-<% if defined?(@rsync_restore_args) and @rsync_restore_args.is_a?(Array) and !@rsync_restore_args.empty? -%>
-$Conf{RsyncRestoreArgs} = ['<%= @rsync_restore_args.join("', '") %>'];
+<% if defined?(@rsync_restore_args) and !@rsync_restore_args.empty? -%>
+$Conf{RsyncRestoreArgs} = <%= PP.pp(@rsync_restore_args,'').chomp -%>;
 <% end -%>
 <% if defined?(@dump_pre_user_cmd) and !@dump_pre_user_cmd.empty? -%>
-$Conf{DumpPreUserCmd} = '<%= @dump_pre_user_cmd %>';
+$Conf{DumpPreUserCmd} = "<%= @dump_pre_user_cmd %>";
 <% end -%>
 <% if defined?(@dump_post_user_cmd) and !@dump_post_user_cmd.empty? -%>
-$Conf{DumpPostUserCmd}    = '<%= @dump_post_user_cmd %>';
+$Conf{DumpPostUserCmd}    = "<%= @dump_post_user_cmd %>";
 <% end -%>
 <% if defined?(@dump_pre_share_cmd) and !@dump_pre_share_cmd.empty? -%>
-$Conf{DumpPreShareCmd}    = '<%= @dump_pre_share_cmd %>';
+$Conf{DumpPreShareCmd}    = "<%= @dump_pre_share_cmd %>";
 <% end -%>
 <% if defined?(@dump_post_share_cmd) and !@dump_post_share_cmd.empty? -%>
-$Conf{DumpPostShareCmd}   = '<%= @dump_post_share_cmd %>';
+$Conf{DumpPostShareCmd}   = "<%= @dump_post_share_cmd %>";
 <% end -%>
 <% if defined?(@restore_pre_user_cmd) and !@restore_pre_user_cmd.empty? -%>
-$Conf{RestorePreUserCmd}  = '<%= @restore_pre_user_cmd %>';
+$Conf{RestorePreUserCmd}  = "<%= @restore_pre_user_cmd %>";
 <% end -%>
 <% if defined?(@restore_post_user_cmd) and !@restore_post_user_cmd.empty? -%>
-$Conf{RestorePostUserCmd} = '<%= @restore_post_user_cmd %>';
+$Conf{RestorePostUserCmd} = "<%= @restore_post_user_cmd %>";
 <% end -%>
 <% if not defined?(@user_cmd_check_status) -%>
 $Conf{UserCmdCheckStatus} = 0;
@@ -186,25 +154,17 @@ $Conf{UserCmdCheckStatus} = 0;
 $Conf{EMailNotifyMinDays} = <%= @email_notify_min_days %>;
 <% end -%>
 <% if defined?(@email_from_user_name) and !@email_from_user_name.empty? -%>
-$Conf{EMailFromUserName} = '<%= @email_from_user_name %>';
+$Conf{EMailFromUserName} = "<%= @email_from_user_name %>";
 <% end -%>
 <% if defined?(@email_admin_user_name) and !@email_admin_user_name.empty? -%>
-$Conf{EMailAdminUserName} = '<%= @email_admin_user_name %>';
+$Conf{EMailAdminUserName} = "<%= @email_admin_user_name %>";
 <% end -%>
 <% if defined?(@email_user_dest_domain) and !@email_user_dest_domain.empty? -%>
-$Conf{EMailUserDestDomain} = '<%= @email_user_dest_domain %>';
+$Conf{EMailUserDestDomain} = "<%= @email_user_dest_domain %>";
 <% end -%>
 <% if defined?(@email_notify_old_backup_days) -%>
 $Conf{EMailNotifyOldBackupDays} = <%= @email_notify_old_backup_days %>;
 <% end -%>
 <% if defined?(@blackout_periods) -%>
-$Conf{BlackoutPeriods} = [
-<% @blackout_periods.each do |period| -%>
-<% if period.is_a?(Hash) -%>{
-<% period.each_pair do |key,value| -%>
-<%= key %>  => <% if value.is_a?(Array) %>[<%= value.join(', ') %>]<% else %><%= value %><% end %>,
-<% end -%>
-},
-<% end -%>
-<% end -%>];
+$Conf{BlackoutPeriods} = <%= PP.pp(@blackout_periods,'').chomp -%>;
 <% end -%>
